# dotfiles

./: README.md  dot_gitconfig  dot_ripgreprc  dot_zshrc
.config/backup-nvim/plugins/: tmp.lua
.config/cmake/: .cmake-format.yaml
Documents/: pacman.conf  wsl.conf
documents/: nonpackageinstall.md
documents/pacman.d/: mirrorlist
dot_config/helix/: config.toml
private_dot_config/clangd/: config.yaml
private_dot_config/ripgrep/: dot_ripgreprc
private_dot_config/tealdeer/: config.toml
private_dot_config/vivid/themes/: breeze.yml
private_dot_config/yamlfmt/: dot_yamlfmt
private_dot_config/yamllint/: config
private_dot_config/yazi/: package.toml  theme.toml  yazi.toml
private_dot_config/yazi/flavors/bluloco-dark.yazi/: readonly_README.md  readonly_flavor.toml
private_dot_config/yazi/flavors/monokai.yazi/: readonly_README.md  readonly_flavor.toml
private_dot_local/private_share/cmake/CmakeProjectsConfigs/multiDir/: CMakeLists.txt
private_dot_local/private_share/cmake/CmakeProjectsConfigs/multiDir/src/subdir1/: CMakeLists.txt
private_dot_local/private_share/cmake/CmakeProjectsConfigs/multiDir/src/subdir2/: CMakeLists.txt
private_dot_local/private_share/cmake/CmakeProjectsConfigs/singleDir/: CMakeLists.txt
